// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CallTreeSidebar can expand subcategories 1`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="C
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="C"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      3.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      2.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      3
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      67%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      <button
        class="sidebar-toggle"
        data-category-index="2"
        type="button"
      >
        Layout
      </button>
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      3
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-purple"
        style="width: 100%;"
      />
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Self sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      <button
        class="sidebar-toggle"
        data-category-index="2"
        type="button"
      >
        Layout
      </button>
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-purple"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar can expand subcategories 2`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="C
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="C"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      3.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      2.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      3
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      67%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      <button
        class="sidebar-toggle expanded"
        data-category-index="2"
        type="button"
      >
        Layout
      </button>
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      3
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-purple"
        style="width: 100%;"
      />
    </div>
    <div
      class="sidebar-label sidebar-label-indent"
    >
      FakeSubCategoryC
    </div>
    <div
      class="sidebar-percentage"
    >
      67%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <div
      class="sidebar-label sidebar-label-indent"
    >
      FakeSubCategoryD
    </div>
    <div
      class="sidebar-percentage"
    >
      33%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Self sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      <button
        class="sidebar-toggle"
        data-category-index="2"
        type="button"
      >
        Layout
      </button>
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-purple"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying bytes data 1`] = `
<div
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    Select a node to display information about it.
  </div>
</div>
`;

exports[`CallTreeSidebar matches the snapshots when displaying bytes data 2`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="Cjs
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="Cjs"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Running size
    </div>
    <div
      class="sidebar-percentage"
    >
      17%
    </div>
    <div
      class="sidebar-value"
    >
      1B
    </div>
    <div
      class="sidebar-label"
    >
      Self size
    </div>
    <div
      class="sidebar-percentage"
    >
      —
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running bytes
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      JavaScript
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      1B
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-yellow"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 1`] = `
<div
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    Select a node to display information about it.
  </div>
</div>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 2`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="Cjs
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="Cjs"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      2.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      —
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      50%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      —
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      JavaScript
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-yellow"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 3`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="D
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="D"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      1.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      —
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      25%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      —
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      JavaScript
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-yellow"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 4`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="H
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="H"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      2.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      1.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      50%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      25%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Idle
    </div>
    <div
      class="sidebar-percentage"
    >
      50%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-transparent"
        style="width: 50%;"
      />
    </div>
    <div
      class="sidebar-label"
    >
      Layout
    </div>
    <div
      class="sidebar-percentage"
    >
      50%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-purple"
        style="width: 50%;"
      />
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Self sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Layout
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-purple"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 5`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="Ejs
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="Ejs"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      1.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      1.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      25%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      25%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      JavaScript
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-yellow"
        style="width: 100%;"
      />
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Self sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      JavaScript
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-yellow"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 1`] = `
<div
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    Select a node to display information about it.
  </div>
</div>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 2`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="Ejs
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="Ejs"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      2.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      2.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      50%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      50%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      JavaScript
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      2
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-yellow"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 3`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="H
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="H"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      1.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      1.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      25%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      25%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Layout
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-purple"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 4`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="H
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="H"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      1.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      —
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      25%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      —
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Idle
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-transparent"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 5`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="A
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="A"
        />
      </h2>
    </header>
    <h4
      class="sidebar-title3"
    >
      <div>
        Call node details
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Traced running time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      1.0ms
    </div>
    <div
      class="sidebar-label"
    >
      Traced self time
    </div>
    <div
      class="sidebar-percentage"
    />
    <div
      class="sidebar-value"
    >
      —
    </div>
    <div
      class="sidebar-label"
    >
      Running samples
    </div>
    <div
      class="sidebar-percentage"
    >
      25%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-label"
    >
      Self samples
    </div>
    <div
      class="sidebar-percentage"
    >
      —
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3 sidebar-title-label"
    >
      <div
        class="sidebar-title-label-left"
      >
        Categories
      </div>
      <div
        class="sidebar-title-label-right"
      >
        Running sample count
      </div>
    </h4>
    <div
      class="sidebar-label"
    >
      Layout
    </div>
    <div
      class="sidebar-percentage"
    >
      100%
    </div>
    <div
      class="sidebar-value"
    >
      1
    </div>
    <div
      class="sidebar-histogram-bar"
    >
      <div
        class="sidebar-histogram-bar-color category-color-purple"
        style="width: 100%;"
      />
    </div>
  </div>
</aside>
`;
